include $(top_srcdir)/build-aux/init.mk

# -- Distribute and install headers
nobase_include_HEADERS =				\
		kpp/interfacestep/fwd.hh		\
		kpp/interfacestep/kppinterface-nowarning.hh \
		kpp/interfacestep/interface.hh \
		kpp/interfacestep/command-setinitgoal.hh \
		kpp/interfacestep/command-dynamicpath.hh \
		kpp/interfacestep/command-removeconstraints.hh \
		kpp/interfacestep/command-grabobject.hh

